Spacing fixes to Modules

--- a/sitedev/css/modules.css
+++ b/sitedev/css/modules.css
@@ -2559,7 +2559,6 @@
 }
 
 .moduleCM35 {
-	margin-top: 3.0em;
 }
 
 .moduleCM35 img {
